django/django_orm/single_model/user(shell).txt
Microsoft Windows [Version 10.0.19042.985]
(c) Microsoft Corporation. All rights reserved.

C:\Users\DELL\Desktop\python_stack\django\django_intro>django-admin startproject single_model
'django-admin' is not recognized as an internal or external command,
operable program or batch file.

C:\Users\DELL\Desktop\python_stack\django\django_intro>django-admin startproject single_model
'django-admin' is not recognized as an internal or external command,
operable program or batch file.

C:\Users\DELL\Desktop\python_stack\django\django_intro>django-admin startproject single_model
'django-admin' is not recognized as an internal or external command,
operable program or batch file.

C:\Users\DELL\Desktop\python_stack\django\django_intro>cd ..

C:\Users\DELL\Desktop\python_stack\django>cd ..

C:\Users\DELL\Desktop\python_stack>call my_environments\djangoPy3Env\Scripts\activate

(djangoPy3Env) C:\Users\DELL\Desktop\python_stack>cd django

(djangoPy3Env) C:\Users\DELL\Desktop\python_stack\django>cd django_intro

(djangoPy3Env) C:\Users\DELL\Desktop\python_stack\django\django_intro>django-admin startproject single_model

(djangoPy3Env) C:\Users\DELL\Desktop\python_stack\django\django_intro>python manage.py startapp user_app
C:\Users\DELL\AppData\Local\Programs\Python\Python39\python.exe: can't open file 'C:\Users\DELL\Desktop\python_stack\django\django_intro\manage.py': [Errno 2] No such file or directory

(djangoPy3Env) C:\Users\DELL\Desktop\python_stack\django\django_intro>cd single_model

(djangoPy3Env) C:\Users\DELL\Desktop\python_stack\django\django_intro\single_model>python manage.py startapp user_app

(djangoPy3Env) C:\Users\DELL\Desktop\python_stack\django\django_intro\single_model>code .

(djangoPy3Env) C:\Users\DELL\Desktop\python_stack\django\django_intro\single_model>python manage.py makemigrations
No changes detected

(djangoPy3Env) C:\Users\DELL\Desktop\python_stack\django\django_intro\single_model>python manage.py migrate
Operations to perform:
  Apply all migrations: admin, auth, contenttypes, sessions
Running migrations:
  Applying contenttypes.0001_initial... OK
  Applying auth.0001_initial... OK
  Applying admin.0001_initial... OK
  Applying admin.0002_logentry_remove_auto_add... OK
  Applying admin.0003_logentry_add_action_flag_choices... OK
  Applying contenttypes.0002_remove_content_type_name... OK
  Applying auth.0002_alter_permission_name_max_length... OK
  Applying auth.0003_alter_user_email_max_length... OK
  Applying auth.0004_alter_user_username_opts... OK
  Applying auth.0005_alter_user_last_login_null... OK
  Applying auth.0006_require_contenttypes_0002... OK
  Applying auth.0007_alter_validators_add_error_messages... OK
  Applying auth.0008_alter_user_username_max_length... OK
  Applying auth.0009_alter_user_last_name_max_length... OK
  Applying auth.0010_alter_group_name_max_length... OK
  Applying auth.0011_update_proxy_permissions... OK
  Applying sessions.0001_initial... OK

(djangoPy3Env) C:\Users\DELL\Desktop\python_stack\django\django_intro\single_model>python manage.py shell
Python 3.9.5 (tags/v3.9.5:0a7dcbd, May  3 2021, 17:27:52) [MSC v.1928 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from user.models import *
Traceback (most recent call last):
  File "<console>", line 1, in <module>
ModuleNotFoundError: No module named 'user'
>>> from user_app.models import *
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "C:\Users\DELL\Desktop\python_stack\django\django_intro\single_model\user_app\models.py", line 3, in <module>
    class user(models.Model):
  File "C:\Users\DELL\Desktop\python_stack\my_environments\djangoPy3Env\lib\site-packages\django\db\models\base.py", line 108, in __new__
    raise RuntimeError(
RuntimeError: Model class user_app.models.user doesn't declare an explicit app_label and isn't in an application in INSTALLED_APPS.
>>> from user_app.models import
  File "<console>", line 1
    from user_app.models import
                               ^
SyntaxError: invalid syntax
>>> from user_app.models import*
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "C:\Users\DELL\Desktop\python_stack\django\django_intro\single_model\user_app\models.py", line 3, in <module>
    class user(models.Model):
  File "C:\Users\DELL\Desktop\python_stack\my_environments\djangoPy3Env\lib\site-packages\django\db\models\base.py", line 108, in __new__
    raise RuntimeError(
RuntimeError: Model class user_app.models.user doesn't declare an explicit app_label and isn't in an application in INSTALLED_APPS.
>>> from user_app.models import all
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "C:\Users\DELL\Desktop\python_stack\django\django_intro\single_model\user_app\models.py", line 3, in <module>
    class user(models.Model):
  File "C:\Users\DELL\Desktop\python_stack\my_environments\djangoPy3Env\lib\site-packages\django\db\models\base.py", line 108, in __new__
    raise RuntimeError(
RuntimeError: Model class user_app.models.user doesn't declare an explicit app_label and isn't in an application in INSTALLED_APPS.
>>> from user_app.models import user
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "C:\Users\DELL\Desktop\python_stack\django\django_intro\single_model\user_app\models.py", line 3, in <module>
    class user(models.Model):
  File "C:\Users\DELL\Desktop\python_stack\my_environments\djangoPy3Env\lib\site-packages\django\db\models\base.py", line 108, in __new__
    raise RuntimeError(
RuntimeError: Model class user_app.models.user doesn't declare an explicit app_label and isn't in an application in INSTALLED_APPS.
>>> exit()

(djangoPy3Env) C:\Users\DELL\Desktop\python_stack\django\django_intro\single_model>python manage.py makemigrations
No changes detected

(djangoPy3Env) C:\Users\DELL\Desktop\python_stack\django\django_intro\single_model>python manage.py migrate
Operations to perform:
  Apply all migrations: admin, auth, contenttypes, sessions
Running migrations:
  No migrations to apply.

(djangoPy3Env) C:\Users\DELL\Desktop\python_stack\django\django_intro\single_model>python manage.py makemigrations
No changes detected

(djangoPy3Env) C:\Users\DELL\Desktop\python_stack\django\django_intro\single_model>python manage.py migrate
Operations to perform:
  Apply all migrations: admin, auth, contenttypes, sessions
Running migrations:
  No migrations to apply.

(djangoPy3Env) C:\Users\DELL\Desktop\python_stack\django\django_intro\single_model>python manage.py makemigrations
Migrations for 'user_app':
  user_app\migrations\0001_initial.py
    - Create model user

(djangoPy3Env) C:\Users\DELL\Desktop\python_stack\django\django_intro\single_model>python manage.py migrate
Operations to perform:
  Apply all migrations: admin, auth, contenttypes, sessions, user_app
Running migrations:
  Applying user_app.0001_initial... OK

(djangoPy3Env) C:\Users\DELL\Desktop\python_stack\django\django_intro\single_model>python manage.py shell
Python 3.9.5 (tags/v3.9.5:0a7dcbd, May  3 2021, 17:27:52) [MSC v.1928 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from user_app.models import user
>>> user.objects.create(first_name='wadee', last_name='adam',email='wadee@hotmail',age=27)
<user: user object (1)>
>>> user.objects.create(first_name='tawfeeq', last_name='adam',email='ta@hotmail',age=23)
<user: user object (2)>
>>> user.objects.create(first_name='joj', last_name='adam',email=a@hotmail',age=3)
  File "<console>", line 1
    user.objects.create(first_name='joj', last_name='adam',email=a@hotmail',age=3)
                                                                                  ^
SyntaxError: EOL while scanning string literal
>>> user.objects.create(first_name='joj', last_name='adam',email='a@hotmail',age=3)
<user: user object (3)>
>>> user.objects.first()
<user: user object (1)>
>>> user.objects.last()
<user: user object (3)>
>>> user.objects.all
<bound method BaseManager.all of <django.db.models.manager.Manager object at 0x00000231A9634DF0>>
>>> user.objects.all()
<QuerySet [<user: user object (1)>, <user: user object (2)>, <user: user object (3)>]>
>>> c=user.objects.get(id=3)
>>> c.last_name="Pancakes"
>>> c.save()
>>> user.objects.last().__dict__
{'_state': <django.db.models.base.ModelState object at 0x00000231A9672340>, 'id': 3, 'first_name': 'joj', 'last_name': 'Pancakes', 'email': 'a@hotmail', 'age': 3, 'created_at': datetime.datetime(2021, 5, 20, 13, 51, 38, 626777, tzinfo=<UTC>), 'updated_at': datetime.datetime(2021, 5, 20, 13, 59, 51, 101722, tzinfo=<UTC>)}
>>> c=user.objects.get(id=2)
>>> c.delete
<bound method Model.delete of <user: user object (2)>>
>>> c.delete()
(1, {'user_app.user': 1})
>>> user.objects.all().__dict__
{'model': <class 'user_app.models.user'>, '_db': None, '_hints': {}, 'query': <django.db.models.sql.query.Query object at 0x00000231A9659E80>, '_result_cache': None, '_sticky_filter': False, '_for_write': False, '_prefetch_related_lookups': (), '_prefetch_done': False, '_known_related_objects': {}, '_iterable_class': <class 'django.db.models.query.ModelIterable'>, '_fields': None}
>>>  user.objects.all().__dict__
  File "<console>", line 1
    user.objects.all().__dict__
IndentationError: unexpected indent
>>>  user.objects.all().values()
  File "<console>", line 1
    user.objects.all().values()
IndentationError: unexpected indent
>>>  user.objects.all().values
  File "<console>", line 1
    user.objects.all().values
IndentationError: unexpected indent
>>> user.objects.all().values
<bound method QuerySet.values of <QuerySet [<user: user object (1)>, <user: user object (3)>]>>
>>> user.objects.all().order_by("first_name")
<QuerySet [<user: user object (3)>, <user: user object (1)>]>
>>> user.objects.all().order_by("-first_name")
<QuerySet [<user: user object (1)>, <user: user object (3)>]>
>>>